Add support for building `noblas` version
in a separate temporary branch

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,11 +12,9 @@ source:
     # The following patch is already in `master` upstream, so can probably
     # be removed for next version
     - 0001-Fix-compilation-of-examples-tlmdif_-on-Windows.patch  # [win]
-    # Needed because OpenBLAS changes some values in this test
-    - 0001-Remove-tlmdif-test-example.patch  # [blas_impl == 'openblas']
 
 build:
-  skip: true  # [win and vc<14]
+  skip: true  # [win]
   number: 2
 
 requirements:
@@ -25,8 +23,6 @@ requirements:
     - {{ compiler('cxx') }}  # Needed because CMake project is not declared as C
     - cmake
     - ninja
-  host:  # [blas_impl == 'openblas']
-    - openblas-devel  # [blas_impl == 'openblas']
 
 test:
   commands:
