Switch to using a variant that is not already present.
Solves some weird override issues in conda render

--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,3 +1,6 @@
-blas_impl:
+local_blas_impl:
   - noblas
-  - openblas  # [unix]
+  - openblas  # [linux64]
+  - openblas  # [osx]
+  - openblas  # [aarch64]
+  - openblas  # [ppc64le]
