--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
     # be removed for next version
     - 0001-Fix-compilation-of-examples-tlmdif_-on-Windows.patch  # [win]
     # Needed because OpenBLAS changes some values in this test
-    - 0001-Remove-tlmdif-test-example.patch  # [blas_impl == 'openblas']
+    - 0001-Remove-tlmdif-test-example.patch  # [local_blas_impl == 'openblas']
 
 build:
   skip: true  # [win and vc<14]
@@ -25,8 +25,9 @@ requirements:
     - {{ compiler('cxx') }}  # Needed because CMake project is not declared as C
     - cmake
     - ninja
-  host:  # [blas_impl == 'openblas']
-    - openblas-devel  # [blas_impl == 'openblas']
+  host:  # [local_blas_impl == 'openblas']
+    - {{ local_blas_impl }}
+    - openblas-devel  # [local_blas_impl == 'openblas']
 
 test:
   commands:
