MNT: Re-rendered with conda-build 3.17.8, conda-smithy 3.2.14, and conda-forge-pinning 2019.02.21

--- a/.azure-pipelines/azure-pipelines-osx.yml
+++ b/.azure-pipelines/azure-pipelines-osx.yml
@@ -10,8 +10,11 @@ jobs:
   strategy:
     maxParallel: 8
     matrix:
-      osx_:
-        CONFIG: osx_
+      osx_local_blas_implnoblas:
+        CONFIG: osx_local_blas_implnoblas
+        UPLOAD_PACKAGES: False
+      osx_local_blas_implopenblas:
+        CONFIG: osx_local_blas_implopenblas
         UPLOAD_PACKAGES: False
 
   steps:
