--- a/.ci_support/osx_local_blas_implnoblas.yaml
+++ b/.ci_support/osx_local_blas_implnoblas.yaml
@@ -1,19 +1,16 @@
+MACOSX_DEPLOYMENT_TARGET:
+- '10.9'
 c_compiler:
-- vs2015
+- clang
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
-- vs2015
+- clangxx
 local_blas_impl:
 - noblas
-pin_run_as_build:
-  vc:
-    max_pin: x
-vc:
-- '14'
-zip_keys:
-- - vc
-  - c_compiler
-  - cxx_compiler
+macos_machine:
+- x86_64-apple-darwin13.4.0
+macos_min_version:
+- '10.9'
