--- a/.ci_support/osx_local_blas_implopenblas.yaml
+++ b/.ci_support/osx_local_blas_implopenblas.yaml
@@ -1,7 +1,5 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-blas_impl:
-- openblas
 c_compiler:
 - clang
 channel_sources:
@@ -10,6 +8,8 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - clangxx
+local_blas_impl:
+- openblas
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
