--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,8 @@ osx_image: xcode9.4
 
 env:
   matrix:
-    - CONFIG=osx_
+    - CONFIG=osx_local_blas_implnoblas
+    - CONFIG=osx_local_blas_implopenblas
 
   global:
     # The BINSTAR_TOKEN secure variable. This is defined canonically in conda-forge.yml.
