--- a/.azure-pipelines/azure-pipelines-linux.yml
+++ b/.azure-pipelines/azure-pipelines-linux.yml
@@ -6,23 +6,20 @@ jobs:
 - job: linux
   pool:
     vmImage: ubuntu-16.04
-  timeoutInMinutes: 240
+  timeoutInMinutes: 360
   strategy:
     maxParallel: 8
     matrix:
-      linux_local_blas_implnoblas:
-        CONFIG: linux_local_blas_implnoblas
-        UPLOAD_PACKAGES: False
-      linux_local_blas_implopenblas:
-        CONFIG: linux_local_blas_implopenblas
-        UPLOAD_PACKAGES: False
+      linux_:
+        CONFIG: linux_
+        UPLOAD_PACKAGES: True
   steps:
   - script: |
       sudo pip install --upgrade pip
       sudo pip install setuptools shyaml
     displayName: Install dependencies
 
-  # configure qemu binfmt-misc running.  This allows us to run docker containers 
+  # configure qemu binfmt-misc running.  This allows us to run docker containers
   # embedded qemu-static
   - script: |
       docker run --rm --privileged multiarch/qemu-user-static:register --reset --credential yes
