--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -2,14 +2,18 @@ MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 c_compiler:
 - clang
+c_compiler_version:
+- '4'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
 - conda-forge main
 cxx_compiler:
 - clangxx
-local_blas_impl:
-- openblas
+cxx_compiler_version:
+- '4'
+libblas:
+- 3.8 *netlib
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
