--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,5 @@
 {% set name = "cminpack" %}
-{% set version = "1.3.6" %}
+{% set version = "1.3.7" %}
 
 package:
   name: {{ name }}
@@ -7,7 +7,7 @@ package:
 
 source:
   url: https://github.com/devernay/{{ name }}/archive/v{{ version }}.tar.gz
-  sha256: 3c07fd21308c96477a2c900032e21d937739c233ee273b4347a0d4a84a32d09f
+  sha256: b891f33ffcfb8b246bb6147a4da6308cdb2386ca42a99892ff9b2e884f8b0386
   patches:
     # The following patch is already in `master` upstream, so can probably
     # be removed for next version
@@ -17,7 +17,7 @@ source:
 
 build:
   skip: true  # [win and vc<14]
-  number: 5
+  number: 0
   run_exports:
     - {{ pin_subpackage('cminpack', max_pin='x.x') }}
 
@@ -41,16 +41,17 @@ test:
     - test -a $PREFIX/lib/libcminpack$SHLIB_EXT  # [unix]
     - test -f $PREFIX/include/cminpack-1/cminpack.h  # [unix]
     - test -f $PREFIX/include/cminpack-1/minpack.h  # [unix]
-    - test -f $PREFIX/share/cmake/CMinpack/CMinpackConfig.cmake  # [unix]
+    - test -f $PREFIX/share/cminpack/CMinpackConfig.cmake  # [unix]
 
 about:
   home: http://devernay.free.fr/hacks/cminpack/index.html
   license: MINPACK  # Custom BSD-like
   license_family: BSD
-  summary: 'CMinpack includes software for solving nonlinear equations and nonlinear least squares problems'
+  summary: CMinpack includes software for solving nonlinear equations and nonlinear least squares problems
   license_file: CopyrightMINPACK.txt
   dev_url: https://github.com/devernay/cminpack
 
 extra:
   recipe-maintainers:
     - tadeu
+    - jschueller
